[package]
name = "minimux"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
crossterm = "0.28"
vt100 = "0.16"
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }
